<resources>
    <string name="app_name">Login</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered : </string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered :</string>
    <string name="new_credentials">Add your new credentials</string>

</resources>