<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo"/>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/username"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="190dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/pass"
            android:hint="@string/password"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:textStyle="italic"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/maroon"
            android:textStyle="italic"
            android:textSize="16sp"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>